Version 4.1.2
- Fixed "backwards" case ranges in Spin
- Use JMPREL to implement case_fast in P2
- Fixed _rev() operator in C propeller2.h file for P2

Version 4.1.1
- Fixed Spin REV operator to match PNut's Spin2 definition.
- Optimize some P2 moves into BMASK or DECOD instructions
- Allow the word "asm" to be used as a label in Spin
- Allow use of _ in integers in BASIC DATA/READ

Version 4.1.0
- Added BYREF and BYVAL modifiers to BASIC function parameters
- Added ANDALSO and ORELSE operators to BASIC
- Added +=, -=, *=, /=, AND=, OR=, XOR= assignment operators to BASIC
- Added BIN$, OCT$, and HEX$ builtin functions to BASIC
- Added standard Spin2 functions WRPIN, WXPIN, WYPIN, RDPIN, etc. to Spin and BASIC.
- Added [] pointer dereference operator for FreeBasic compatibility.
- Added exponentiation operator ^ to BASIC
- Added a number of other new builtin functions to BASIC, courtesy of Jeff Roark (see include/libsys/stringlibp2.bas)
- Allowed multiple assignment and functions which return multiple values in BASIC
- Cleaned up -w output a bit for P2
- Implemented _ for skipping assignments in multiple assignments
- Implemented a few more peephole optimizations for P2
- Improved the optimizer's dead register detection
- Implemented automatic clkfreq setting based on _clkfreq
- Made sure all of the results in a multi-result function are initialized to 0 for Spin
- Start Spin file compilation in CON mode
- Updated listing file to (attempt to) track ORG in sub-modules
- Fixed a type promotion problem with bitwise operators in C
- Fixed a problem with calculating sizes of arrays referenced as "foo.bar"
- Fixed comments at end-of-line in Spin
- Fixed a problem with local labels in C __pasm
- Fixed a bug in handling of wcz modifier in inline assembly
- Fixed initialization of local character arrays with strings in C

Version 4.0.6
- Allow "static" and "const" or "volatile" to come in any order in C code